Un peu de structure

--- a/MMSongQuizz/app/src/main/res/values/strings.xml
+++ b/MMSongQuizz/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MMSongQuizz</string>
+    <string name="rules">Un titre de piste musicale va vous être donné, vous devez en retrouver l\'artiste. Seulement, il va falloir remplir un taquin pour donner la réponse.</string>
 </resources>
